examples/resolver/checker/fail/tuple_index_out_of_range.axo
const bad = (1, 2) + true
print(bad)
